# nicegeo-remaining-axioms

./: CONTRIBUTING.md  README.md  dune-project  eq_symm.txt  proof.txt
.github/workflows/: ci.yml
Error_msgs/: Error.ml  Kernel_exn_format.ml  Kernel_to_elab.ml
elab/: Error.ml  Error.mli  convert.ml  convert.mli  decl.ml  decl.mli  dune  elab.ml  env.txt  interface.ml  interface.mli  kernel_pretty.ml  kernel_pretty.mli  lexer.mll  nice_messages.ml  nice_messages.mli  parser.mly  pretty.ml  pretty.mli  print.ml  term.ml  term.mli  typecheck.ml  typecheck.mli  types.ml  types.mli
kernel/: dune  exceptions.ml  exceptions.mli  infer.ml  infer.mli  term.mli
lib/: decl.ml  env.ml  env.txt  lexer.mll  parser.mly
test/: test_pretty.ml  test_system_e_kernel.ml
test/elab/: test_pretty.ml  testterm.ml
test/kernel/: test_kernel.ml  test_system_e_kernel.ml  testable.ml
