(library
 (name elab)
 (libraries kernel)
 (modules Convert
          Decl
          Error
          Interface 
          Kernel_pretty
          Lexer
          Nice_messages
          Parser 
          Pretty
          Term
          Typecheck
          Types
          ))

 (ocamllex lexer)
 (menhir
  (modules parser))
